// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndicesActions /> spec Split index by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec clear cache for all indexes failed if some indexes are blocked 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec clear cache for all indexes successfully by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec clear cache for mulitple indexes by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec close index by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec delete index by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec filter indices failed when clearing caches for multiple indices 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec filter some closed or blocked indices when clearing caches for multiple indices 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec open index by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec refresh selected indexes by calling commonService 1`] = `
<body
  class="euiBody-hasOverlayMask"
>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="euiPopover euiPopover--anchorDownCenter"
      data-test-subj="moreAction"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButton euiButton--primary"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButton__content"
          >
            EuiIconMock
            <span
              class="euiButton__text"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="euiOverlayMask euiOverlayMask--aboveHeader"
  >
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiModal euiModal--maxWidth-default"
        tabindex="0"
      >
        <button
          aria-label="Closes this modal window"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiModal__closeIcon"
          type="button"
        >
          EuiIconMock
        </button>
        <div
          class="euiModal__flex"
        >
          <div
            class="euiModalHeader"
          >
            <div
              class="euiModalHeader__title"
            >
              Refresh 
              indexes
            </div>
          </div>
          <div
            class="euiModalBody"
          >
            <div
              class="euiModalBody__overflow"
            >
              <div
                style="line-height: 1.5;"
              >
                <p>
                  The following index
                   will be refreshed.
                </p>
                <ul
                  style="list-style-type: disc; list-style-position: inside;"
                >
                  <li
                    data-test-subj="UnblockedItem-unblocked_index"
                  >
                    unblocked_index
                  </li>
                </ul>
                <div
                  class="euiSpacer euiSpacer--l"
                />
                <div
                  class="euiCallOut euiCallOut--warning euiCallOut--small"
                >
                  <div
                    class="euiCallOutHeader"
                  >
                    EuiIconMock
                    <span
                      class="euiCallOutHeader__title"
                    >
                      The following index cannot be refreshed because they are either closed or in red status.
                    </span>
                  </div>
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    <div
                      class="euiTextColor euiTextColor--default"
                    >
                      <p />
                      <ul
                        style="list-style-type: disc; list-style-position: inside;"
                      >
                        <li
                          data-test-subj="BlockedItem-blocked_index"
                        >
                          blocked_index
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiModalFooter"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--primary"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  Cancel
                </span>
              </span>
            </button>
            <button
              class="euiButton euiButton--primary euiButton--fill"
              data-test-subj="refreshConfirmButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Refresh
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`<IndicesActions /> spec renders flush component 1`] = `
HTMLCollection [
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="euiPopover euiPopover--anchorDownCenter"
      data-test-subj="moreAction"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButton euiButton--primary"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButton__content"
          >
            EuiIconMock
            <span
              class="euiButton__text"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    class="euiOverlayMask euiOverlayMask--aboveHeader"
  >
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiModal euiModal--maxWidth-default"
        tabindex="0"
      >
        <button
          aria-label="Closes this modal window"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiModal__closeIcon"
          type="button"
        >
          EuiIconMock
        </button>
        <div
          class="euiModal__flex"
        >
          <div
            class="euiModalHeader"
          >
            <div
              class="euiModalHeader__title"
              data-test-subj="flushModalTitle"
            >
              Flush 
              indexes
            </div>
          </div>
          <div
            class="euiModalBody"
          >
            <div
              class="euiModalBody__overflow"
            >
              <div
                style="line-height: 1.5;"
              >
                <p>
                  The following indexes will be flushed:
                </p>
                <ul
                  style="list-style-type: disc; list-style-position: inside;"
                >
                  <li>
                    test_index2
                  </li>
                  <li>
                    test_index3
                  </li>
                </ul>
                <div
                  class="euiSpacer euiSpacer--l"
                />
                <div
                  class="euiCallOut euiCallOut--warning euiCallOut--small"
                  data-test-subj="flushBlockedCallout"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    <div
                      class="euiTextColor euiTextColor--default"
                    >
                      <p>
                        The following indexes will not be flushed because they are either closed or in red status:
                      </p>
                      <ul
                        style="list-style-type: disc; list-style-position: inside;"
                      >
                        <li>
                          test_index1
                        </li>
                        <li>
                          test_index4
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
                <div
                  class="euiSpacer euiSpacer--l"
                />
              </div>
            </div>
          </div>
          <div
            class="euiModalFooter"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--primary"
              data-test-subj="flushCancelButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  Cancel
                </span>
              </span>
            </button>
            <button
              class="euiButton euiButton--primary euiButton--fill"
              data-test-subj="flushConfirmButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Flush
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`<IndicesActions /> spec renders the component and all the actions should be disabled when no items selected 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec shrink action is disabled if multiple indices are selected 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec shrink action is disabled if the selected index is data_stream 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec shrink index by calling commonService 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec split action is disabled if multiple indices are selected 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec split action is disabled if the selected index is data_stream 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<IndicesActions /> spec unable to clear cache when clearing cache for a closed or blocked index 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  data-test-subj="moreAction"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      class="euiButton euiButton--primary"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
      >
        EuiIconMock
        <span
          class="euiButton__text"
        >
          Actions
        </span>
      </span>
    </button>
  </div>
</div>
`;
